--- a/백준/readMe
+++ b/백준/readMe
@@ -1,3 +1,3 @@
-본 파일 내의 문제들은 직접 푼 것이 아니라, 
+본 파일 내의 문제들은 모든 부분을 직접 푼 것이 아니라, 
 https://www.inflearn.com/course/lecture?courseSlug=%EB%91%90%EC%9E%87-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%EC%BD%94%EB%94%A9%ED%85%8C%EC%8A%A4%ED%8A%B8-%EC%9E%90%EB%B0%94&unitId=148342
-인프런의 해당 강의 영상을 참조하여 알고리즘 공부를 위해 슈도 코드까지 확인 후, 풀이한 문제들을 업로드합니다. 
+인프런의 해당 강의 영상을 참조하여 알고리즘 공부를 위해 슈도 코드까지만 확인 후, 풀이 및 영상을 통해 재검수한 문제들을 업로드합니다. 
